apps/2048/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "2048"
spec:
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: alexwhen/docker-2048
        name: "docker-2048"
        ports:
        - containerPort: 80
          name: http
