apps/2048/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "docker-2048"
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: "2048"
