apps/2048/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: docker2048.apps.cloud-platforms-sandbox.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-2048
          servicePort: 80
